--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="anotherstr">Hello World!</string>
     <string name="click">Click</string>
     <string name="textByButton">textText</string>
+    <string name="loadingText">Загрузка...</string>
 </resources>
